--- a/.eslintrc
+++ b/.eslintrc
@@ -4,8 +4,7 @@
   },
   "extends": "airbnb-base",
   "rules": {
-    "no-underscore-dangle": ["error",{"allow":["_id"]}],
-    "consistent-return": "off"
+    "no-underscore-dangle": ["error",{"allow":["_id"]}]
   },
   "overrides": [
   ],
